--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$color-white: #fff;
+$color-black: #000;
+$color-blue: #0075ff;
+$color-button: #005ecc;
+$color-regular-text: #3e3e3e;
+$color-secondary-text: #9fadc2;
+$color-text-input: #8f99a8;
+$color-bg-input: #f6f8ff;
+$color-input-border: #ccd0e0;
