--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "reset";
+@import "default";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/main-section.scss";
+@import "./blocks/about-us.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/button.scss";
+@import "./blocks/testimonials.scss";
+@import "./blocks/contact-us.scss";
+@import "./blocks/footer.scss";
