--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,5 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%container {
+  max-width: 1020px;
+  padding: 25px 20px;
+  margin: 0 auto;
 }
